# mcp-bytesmith

./: CHANGELOG.md  README.md  TODO  plan.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: test.sh
src/mcp_bytesmith/: __init__.py  __main__.py  core.py  errors.py  eth.py  jsonfix.py  serialize.py  server.py
tests/: test_abi_codec.py  test_bip32_derive.py  test_bip39.py  test_byte_order.py  test_bytes_edit.py  test_charset_transcode.py  test_codepoints.py  test_data_uri.py  test_decode.py  test_derive_key.py  test_encode.py  test_ens_namehash.py  test_errors.py  test_eth_address_case.py  test_eth_contract_address.py  test_eth_eoa_address.py  test_eth_hash.py  test_eth_selector.py  test_eth_storage_slot.py  test_eth_tx_codec.py  test_hash.py  test_hash_file.py  test_hmac.py  test_id_generate.py  test_info.py  test_jsonfix.py  test_num_convert.py  test_otpauth_uri.py  test_package.py  test_password_hash.py  test_random.py  test_rlp_codec.py  test_serialize_asn1_ssz.py  test_serialize_codec.py  test_server.py  test_string_escape.py  test_string_unescape.py  test_time_convert.py  test_unicode_normalize.py
